# django-orderbus

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  manage.py  order_fulfillment_poc.md  pyproject.toml  test_webhook_hmac.py
observability/: generate-prometheus-config.sh  prometheus.yml  prometheus.yml.template
observability/grafana/provisioning/datasources/: prometheus.yml
orderbus/: asgi.py  otel.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  publishers.py  pubsub_utils.py  security.py  serializers.py  urls.py  views.py  webhooks.py
orders/management/commands/: subscribe_order_created.py
orders/migrations/: 0001_initial.py  0002_order_idempotency_key.py
orders/shopify/: client.py
prototype/: __init__.py  publisher.py  pull_messages.py  subscriber.py
